# CParaGL

./: .clang-format  CMakeLists.txt
include/: VectorN.hpp
sources/: main.cpp  test_VectorN.cpp
